--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
       "last 1 safari version"
     ]
   },
+  "homepage": "/organizer",
   "devDependencies": {
     "@types/enzyme": "^3.10.8",
     "@types/jest": "^26.0.22",
